@@ -1,5 +1,10 @@
 2015-03-22 Riccardo Mottola <rm@gnu.org>
 
+	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
+	Convert CMYK to RGB before serializing.
+
+2015-03-22 Riccardo Mottola <rm@gnu.org>
+
 	* Modules/Editors/ProjectCenter/PCEditor.m
 	Actually use the background color preference.
 
